api: update places model
Also since this patch we use maps api for retrieving info about places.
